--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
