--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@types/js-cookie": "^3.0.3",
+    "js-cookie": "^3.0.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
